# medapp-agent

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
agent/: README.md  pyproject.toml
agent/src/: instructions.md  main.py
api/: README.md  docker-compose.yml  pyproject.toml
api/src/: main.py
api/src/config/: database.py
api/src/models/: __init__.py  appointment.py  mongo_base.py  patient.py  professional.py  slot.py  specializations.py
api/src/responses/: __init__.py  appointment_response.py  create_appointment_dto.py  patient_response.py  professional_response.py  slot_response.py
api/src/scripts/: seed_database.py
scripts/: seed-database.sh
src/: constants.py  main.py
src/config/: __init__.py  database.py
src/models/: __init__.py  appointment.py  mongo_base.py  patient.py  slot.py  specializations.py
src/responses/: patient.py
src/scripts/: seed_database.py
